--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "naive-ui": "^2.43.2",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-i18n": "^11.1.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
